Revision of InstanceLoader class